crates/oxyde-sql/tests/snapshots/golden_ddl__add_drop_column_table__postgres.snap
---
source: crates/oxyde-sql/tests/golden_ddl.rs
expression: sql
---
ALTER TABLE "users" ADD COLUMN "nickname" VARCHAR(255);

ALTER TABLE "users" ADD COLUMN "score" BIGINT NOT NULL DEFAULT 0;

ALTER TABLE "users" DROP COLUMN "legacy_flag";

DROP TABLE "obsolete"
